SPARK-1222 lithuanian language updates
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12183 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -195,6 +195,7 @@
 accept = Priimti
 active = Aktyvu
 add = Prid\u0117ti
+administrator = Administratorius
 answer = Atsakymas
 apply = Taikyti
 available = Prieinamas
@@ -285,6 +286,7 @@ button.update = &Atnaujinti
 button.view.notes = Per\u017ei\u016br\u0117ti u\u017era\u0161us
 button.view.profile = Per\u017ei\u016br\u0117ti profil\u012f
 button.view.tasklist = Per\u017ei\u016br\u0117ti u\u017eduotis
+button.re.detect = &Aptikti i\u0161 naujo
 
 checkbox.allow.buzz = &Leisti Jus i\u0161kviesti
 checkbox.auto.discover.port = &Automatinis serverio ir jo prievado aptikimas
@@ -294,6 +296,10 @@ checkbox.disable.prev.chat.history = &I\u0161jungti ankstesni\u0173 pokalbi\u017
 checkbox.enable.emoticons = &Rodyti jaustukus
 checkbox.idle.enabled = \u012ejungti neveikos rodym\u0105
 checkbox.launch.on.startup = Paleisti startavus
+checkbox.reconnet.info = Nurodyti pakartotino prisijungimo rodym\u0105:
+checkbox.reconnect.panel.big = Rodyti kaip Panel\u0119
+checkbox.reconnect.panel.small = Rodyti adresat\u0173 grup\u0117je
+checkbox.reconnect.panel.icon = Rodyti kaip ikon\u0105
 checkbox.notify.user.comes.online = Rodyti kito prisijungim\u0105
 checkbox.notify.user.goes.offline = Rodyti kito atsijungim\u0105
 checkbox.notify.typing.systemtray = Sistemos juostel\u0117je rodyti kada ra\u0161oma
@@ -343,6 +349,10 @@ group.search.results = Paie\u0161kos rezultatai
 group.chat.name.notification = Apie jus kalba\u2026
 group.chat.name.match = J\u016bs\u0173 vard\u0105 pamin\u0117jo grupiniame pokalbyje:
 
+label.na = n\u0117ra ira\u0161o
+label.cell = Mobilus nr.
+label.work = Darbinis nr.
+label.home = Nam\u0173 nr.
 label.accounts = &Paskyra
 label.add.conference.service = &Konferencij\u0173 tarnybos prid\u0117jimas
 label.add.jid = &Pakviesti ir
@@ -444,6 +454,9 @@ label.truststore.location = Patikim\u0173 sertifikat\u0173 saugyklos vieta
 label.pkcs.library.file = PKCS#11 bibliotekos failas
 label.x509.certificate = X.509 sertifikatas
 label.apple.keychain = Apple KeyChain
+label.add.to.roster = Prid\u0117ti abonent\u0105 \u012f adresat\u0173 s\u0105ra\u0161\u0105
+label.audio.device = &Garso \u012frenginys
+label.video.device = &Vaizdo \u012frenginys
 
 menuitem.about = Apie
 menuitem.actions = Veiksmai
@@ -456,6 +469,7 @@ menuitem.add.groupchat.myname = I\u0161ry\u0161kinti mano vard\u0105, kai apie j
 menuitem.add.groupchat.mytext = I\u0161ry\u0161kinti mano tekst\u0105, kai k\u0105 nors ra\u0161au
 menuitem.add.groupchat.popname = Parodyti i\u0161\u0161okant\u012f prane\u0161im\u0105, kai kas nors mane pamini
 menuitem.add.groupchat.showjoinleavemessage = Rodyti informacij\u0105 apie prisijungim\u0105 ir atsijungim\u0105
+menuitem.add.groupchat.showrolesinsteadofstatus = Rodyti pokalbio roles vietoje b\u016bsenos ikon\u0173
 menuitem.always.on.top = Visados vir\u0161uje
 menuitem.alert.when.online = Informuoti, kai abonentas taps pasiekiamas
 menuitem.ban = U\u017edrausti
@@ -502,6 +516,8 @@ menuitem.remove.alert.when.online = Pa\u0161alinti informacijos apie prisijungim
 menuitem.remove.bookmark = Pa\u0161alinti \u017eym\u0105
 menuitem.remove.from.group = Pa\u0161alinti i\u0161 grup\u0117s
 menuitem.remove.from.roster = Pa\u0161alinti i\u0161 s\u0105ra\u0161o
+menuitem.block.contact = Blokuoti abonent\u0105
+menuitem.unblock.contact = Atblokuoti abonent\u0105
 menuitem.remove.service = Tarnybos pa\u0161alinimas
 menuitem.rename = Keisti vard\u0105
 menuitem.revoke.moderator = At\u0161aukti pri\u017ei\u016br\u0117toj\u0105
@@ -651,6 +667,7 @@ message.negotiation.file.transfer = Derimasi d\u0117l failo persiuntimo su {0}. 
 message.new.message = Nauja \u017einut\u0117 nuo {0}.
 message.new.spark.available = {0} pasiekiamas. Ar pageidausite \u012fdiegti?
 message.nickname.in.use = \u0160is pseudonimas jau naudojamas. Susigalvokite kit\u0105.
+message.nickname.not.acceptable = N\u0117ra \u0105jungta galimyb\u0117 keisti pseudonimus!
 message.no.avatar.found = Pseudoportretas dar nenurodytas.
 message.no.caller.id = N\u0117ra skambintojo identifikatoriaus.
 message.no.description.available = Be apra\u0161ymo.
@@ -769,6 +786,7 @@ message.your.revoked.granted = Netekote administratoriaus privilegij\u0173.
 message.your.voice.granted = \u0160iame pokalbyje Jums suteiktas balsas.
 message.your.voice.revoked = Netekote balso.
 message.groupchat.require.password = \u0160i pokalbi\u0173 grup\u0117 priims, jei \u012fvesite slapta\u017eod\u012f.
+message.search.for.history = Ie\u0161koti pokalbio \u017eurnale
 
 status.away = Pasitrauk\u0119s
 status.custom.messages = Susikurtos b\u016bsenos
@@ -793,6 +811,7 @@ tab.sso = SSO
 tab.pki = PKI
 
 title.about = Apie
+title.password.required = Reikalingas slapta\u017eodis
 title.task.notification = Prane\u0161imas apie u\u017eduot\u012f
 title.client.logs = \u017durnalo \u012fra\u0161ai
 title.advanced.connection.preferences = Prisijungimo nuostatos i\u0161samiau
@@ -856,13 +875,14 @@ title.general.media = Medijos nuostatos
 title.general.chat.settings = Bendrosios pokalbi\u0173 nuostatos
 title.group.chat = Grupiniai pokalbiai
 title.group.chat.settings = Grupini\u0173 pokalbi\u0173 nuostatos
-title.gtalk.registration = \u201eGTalk\u201c paskyros kredencialai
+title.gtalk.registration = GTalk paskyros kredencialai
 title.history.for = Pokalbio su {0} \u017eurnalas
-title.icq.registration = \u201eICQ\u201c paskyros kredencialai
-title.irc.registration = \u201eIRC\u201c paskyros kredencialai
-title.sametime.registration = \u201eSametime\u201c paskyros kredencialai
-title.facebook.registration = \u201eFacebook\u201c paskyros kredencialai
-title.myspace.registration = \u201eMySpace\u201c paskyros kredencialai
+title.icq.registration = ICQ paskyros kredencialai
+title.irc.registration = IRC paskyros kredencialai
+title.aim.registration = AIM paskyros kredencialai
+title.sametime.registration = Sametime paskyros kredencialai
+title.facebook.registration = Facebook paskyros kredencialai
+title.myspace.registration = MySpace paskyros kredencialai
 title.incoming.call = Skambutis
 title.input.fileexplorer = \u012eveskite fail\u0173 nar\u0161ykl\u0117s vard\u0105:
 title.input.newname = Pra\u0161om \u012fvesti nauj\u0105 vard\u0105: 
@@ -875,7 +895,7 @@ title.login = Prisijungimas
 title.login.error = Prisijungimo klaida
 title.login.settings = Prisijungimo nuostatos
 title.lookup.profile = Ie\u0161koti profilio
-title.msn.registration = \u201eMSN\u201c paskyros kredencialai
+title.msn.registration = MSN paskyros kredencialai
 title.name = Vardas
 title.new.client.available = Galimas naujas klientas
 title.new.roster.group = Nauja viso s\u0105ra\u0161o grup\u0117
@@ -893,7 +913,7 @@ title.plugins = Priedai
 title.preferences = Nuostatos
 title.profile.information = Profilio informacija
 title.profile.not.found = Profilis nerastas
-title.qq.registration = \u201eQQ\u201c paskyros kredencialai
+title.qq.registration = QQ paskyros kredencialai
 title.register.account = Naujos paskyros registravimas
 title.registration.error = Registracijos klaida
 title.reminder = Priminimas
@@ -903,7 +923,7 @@ title.room.information = Informacija apie kambar\u012f
 title.roster = Visi abonentai
 title.select.file.to.send = Failo(\u0173) siuntimui parinkimas
 title.set.status.message = Si\u0173sti b\u016bsenos \u017eini\u0105
-title.simple.registration = \u201eSIMPLE\u201c paskyros kredencialai
+title.simple.registration = SIMPLE paskyros kredencialai
 title.sound.preferences = Gars\u0173 nuostatos
 title.sounds = Garsai
 title.spark.preferences = \u201eSpark\u201c programos nuostatos
@@ -918,9 +938,10 @@ title.view.bookmarks = Parodyti \u017eymas
 title.view.profile.for = Profilis {0} 
 title.view.room.information = Informacija apie kambar\u012f
 title.waiting.to.call = Laukiama skambu\u010dio
-title.xmpp.registration = \u201eXMPP\u201c paskyros kredencialai
+title.xmpp.registration = XMPP paskyros kredencialai
 title.yahoo.registration = Yahoo paskyros kredencialai
 title.appearance.showVCards = Vizitini\u0173 korteli\u0173 \u201eVCards\u201c rodymas adresat\u0173 s\u0105ra\u0161e
+title.subscription.request = Prenumeratos pra\u0161ymas
 
 tooltip.place.a.call = Skambinimas asmeniui VOIP telefonu
 tooltip.appearance = Pokalbi\u0173 aplinkos i\u0161vaizdos keitimas
@@ -936,33 +957,9 @@ tooltip.view.readme = Skaityti \u201eReadMe\u201c fail\u0105
 tree.conference.services = Konferencijos
 tree.users.in.room = Kambaryje apsilank\u0119
 
-###################################
-#####   MISSING    Translation ####
-###################################
+lookandfeel.select = Pasirinkti programos i\u0161vaizd\u0105
+lookandfeel.change.now = Pakeisti dabar
+lookandfeel.tooltip.restart.no = Programos perkrovimas nereikalingas
+lookandfeel.tooltip.restart.yes = Kad \u012fjungti programos sistemin\u0119 i\u0161vaizd\u0105, paspauskite \u012era\u0161yti ir perkraukite Spark
 
-administrator = Administrator
-button.re.detect = &Re-detect
-checkbox.reconnet.info = Specify reconnection display:
-checkbox.reconnect.panel.big = Display as Panel
-checkbox.reconnect.panel.small = Display in contact group
-checkbox.reconnect.panel.icon = Display as icon
-label.na = n/a
-label.cell = Cell
-label.work = Work
-label.home = Home
-label.add.to.roster = Add user to your roster
-label.audio.device = &Audio device
-label.video.device = &Video device
-menuitem.add.groupchat.showrolesinsteadofstatus = Show chat role icons instead of presence icons
-menuitem.block.contact = Block contact
-menuitem.unblock.contact = Unblock contact
-message.nickname.not.acceptable = Nickname change is not enabled!
-message.search.for.history = Search conversation history
-title.password.required = Password required
-title.aim.registration = AIM account credentials
-title.subscription.request = Subscription request
-lookandfeel.select = Select Look & Feel
-lookandfeel.change.now = Change now
-lookandfeel.tooltip.restart.no = No restart is needed
-lookandfeel.tooltip.restart.yes = To toggle a System Look&Feel press Save and restart Spark.
 #!#
