--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -989,5 +989,12 @@ lookandfeel.select = Select Look & Feel
 lookandfeel.change.now = Change now
 lookandfeel.tooltip.restart.no = No restart is needed
 lookandfeel.tooltip.restart.yes = To toggle a System Look&Feel press Save and restart Spark.
+lookandfeel.color.label = Colors
+lookandfeel.color.red = Red
+lookandfeel.color.green = Green
+lookandfeel.color.blue = Blue
+lookandfeel.color.opacity = Opacity
+lookandfeel.color.saved = Color saved
+
 
 #!#
