--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -880,4 +880,10 @@ lookandfeel.select = Wähle ein Thema
 lookandfeel.change.now = Jetzt ändern
 lookandfeel.tooltip.restart.no = Es wird kein Neustart benötigt
 lookandfeel.tooltip.restart.yes = Um ein System Look&Feel auszuwählen, bitte Speichern und Spark neustarten.
+lookandfeel.color.label = Farben
+lookandfeel.color.red = Rot
+lookandfeel.color.green = Grün
+lookandfeel.color.blue = Blau
+lookandfeel.color.opacity = Deckkraft
+lookandfeel.color.saved = Farben gespeichert
 #!#
