updated polish language, is up2date now
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12201 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -229,6 +229,13 @@
 ##     Added key: 'lookandfeel.tooltip.restart.yes
 ##     Added key: 'label.recent.conversation'
 ##     Added key: 'label.frequent.contacts'
+##     Added key: 'checkbox.transport.tab.setting'
+##     Added key: 'lookandfeel.color.label'
+##     Added key: 'lookandfeel.color.red'
+##     Added key: 'lookandfeel.color.green'
+##     Added key: 'lookandfeel.color.blue'
+##     Added key: 'lookandfeel.color.opacity'
+##     Added key: 'lookandfeel.color.saved'
 ##
 ##     Polish translation by Martini26
 
@@ -369,6 +376,7 @@ checkbox.use.krbconf = U\u017cyj krb5.conf lub krb5.ini
 checkbox.use.krb.dns = U\u017cyj DNS
 checkbox.use.specify.below = Okre\u015bl poni\u017csze opcje
 checkbox.use.pki.authentication = U\u017cyj autoryzacji PKI
+checkbox.transport.tab.setting = Pokazuj dost\u0119pne bramy w tabeli (wymaga restartu)
 
 delete.log.permanently = Usu\u0144 dziennik zdarze\u0144
 delete.permanently = Usun\u0105\u0107 trwale?
@@ -1002,4 +1010,10 @@ lookandfeel.select = Wybierz systemowy wygl\u0105d
 lookandfeel.change.now = Zmie\u0144 teraz
 lookandfeel.tooltip.restart.no = Nie jest wymagany restart
 lookandfeel.tooltip.restart.yes = Aby w\u0142\u0105czy\u0107 systemowy wygl\u0105d naci\u015bnij Zapisz i zresetuj Sparka.
+lookandfeel.color.label = Kolory
+lookandfeel.color.red = Czerwony
+lookandfeel.color.green = Zielony
+lookandfeel.color.blue = Niebieski
+lookandfeel.color.opacity = Nieprzezroczysto\u015b\u0107
+lookandfeel.color.saved = Kolor zapisany
 #!#
