now able to select the text which is displayed when automatically going idle with IdlePlugin in Preferences->Login
1 new String for Locales : label.time.till.idlemessage = Automatic idl&e message

adding super awesome stuff for Easter-time ;-)

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12215 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -458,6 +458,7 @@ label.state.and.province = State/province
 label.street.address = Street address
 label.time = Time: {0}
 label.time.till.idle = &Time till idle (min)
+label.time.till.idlemessage = Automatic idl&e message
 label.timeformat = Use {0}
 label.transfer.download.directory = &Download directory:
 label.transfer.timeout = &Transfer timeout (min):
