--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -310,6 +310,7 @@ label.search.service = &Such-Service
 label.xmpp.port = &XMPP Port
 label.response.timeout = &Zeitspanne bis zum Abbruch (sec)
 label.time.till.idle = Zeitspanne für automatisches 'Away' bei &Inaktivität (min)
+label.time.till.idlemessage = Stat&usnachricht für automatisches 'Away'
 label.jabber.id = &Jabber ID
 label.group = &Gruppe
 label.enter.group.name = Namen für neue Gruppe eingeben
