added key: 'label.time.till.idlemessage' in polish.properties
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12217 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -236,6 +236,7 @@
 ##     Added key: 'lookandfeel.color.blue'
 ##     Added key: 'lookandfeel.color.opacity'
 ##     Added key: 'lookandfeel.color.saved'
+##     Added key: 'label.time.till.idlemessage'
 ##
 ##     Polish translation by Martini26
 
@@ -479,6 +480,7 @@ label.state.and.province = Wojew\u00f3dztwo
 label.street.address = Ulica
 label.time = Czas: {0}
 label.time.till.idle = Czas przej\u015bcia w stan bezczynno\u015bci (min)
+label.time.till.idlemessage = Wiadomo\u015b\u0107 po automatycznym przej\u015bciu w stan bezczynno\u015bci
 label.timeformat = U\u017cyj {0}
 label.transfer.download.directory = Katalog pobranych plik\u00f3w:
 label.transfer.timeout = Czas wyga\u015bni\u0119cia transferu (min):
