--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -734,6 +734,7 @@ message.room.destruction.reason = Reason for destroying the room?
 message.room.information.for = Room information for {0}
 message.save.profile = To save changes to your profile, click save
 message.search.for.contacts = Search for contacts
+message.search.input.short = Please provide atleast five letters.
 message.search.for.other.people = Search for other people on the server
 message.search.service.not.available = Unable to contact search service
 message.searching.please.wait = Searching, please wait...
