--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -357,6 +357,7 @@ message.send.picture = Bildschirminhalt versenden.
 message.sent.offline.files = Sie haben offline Dateien gesendet.
 message.spark.secure = Sichere Verbindung aktiv.
 message.search.for.contacts = Nach Kontakten suchen.
+message.search.input.short = Bitte gib mehr als fünf Zeichen ein.
 message.end.conversation = Soll diese Sitzung beendet werden?
 message.end.chat = Soll dieser Chat beendet werden?
 message.close.this.chat = Diesen Chat schließen
