updating polish resources   i18n/spark_i18n_pl.properties
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12240 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -237,8 +237,9 @@
 ##     Added key: 'lookandfeel.color.opacity'
 ##     Added key: 'lookandfeel.color.saved'
 ##     Added key: 'label.time.till.idlemessage'
+##     Added key: 'message.search.input.short'
 ##
-##     Polish translation by Martini26
+##     Polish translation made by Martini26
 
 
 accept = Akceptuj
@@ -297,9 +298,9 @@ button.add2 = Dodaj
 button.advanced = Zaawansowane
 button.approve = Zatwierd\u017a
 button.bookmark.room = Dodaj pok\u00f3j
-button.browse = Przegl\u0105daj…
-button.browse2 = Przegl\u0105daj…
-button.browse3 = Przegl\u0105daj…
+button.browse = Przegl\u0105daj
+button.browse2 = Przegl\u0105daj
+button.browse3 = Przegl\u0105daj
 button.cancel = Anuluj
 button.clear = Wyczy\u015b\u0107
 button.close = Zamknij
@@ -326,7 +327,7 @@ button.save = Zapisz
 button.save.for.future.use = Zapami\u0119taj
 button.search = Szukaj
 button.send = Wy\u015blij
-button.send.email = Email
+button.send.email = E-mail
 button.start.chat = Rozmowa
 button.tasks.active = Aktywne
 button.tasks.all = Wszystkie
@@ -395,7 +396,7 @@ group.notification.options = Opcje powiadomie\u0144
 group.offline = Grupa u\u017cytkownik\u00f3w niedost\u0119pnych
 group.search.form = Wyszukaj
 group.search.results = Wyniki wyszukiwania
-group.chat.name.notification = Widz\u0119 Twoj\u0105 nazw\u0119...
+group.chat.name.notification = Widz\u0119 Twoj\u0105 nazw\u0119
 group.chat.name.match = Twoje imi\u0119 zosta\u0142o u\u017cyte w rozmowie:
 
 label.na = N/A
@@ -538,8 +539,8 @@ menuitem.delete.login.information = Usu\u0144 informacje o logowaniu
 menuitem.destroy.room = Usu\u0144 pok\u00f3j
 menuitem.dial = Zadzwo\u0144
 menuitem.edit = Edytuj
-menuitem.edit.my.profile = Edytuj m\u00f3j profil…
-menuitem.edit.status.message = Edytuj opis statusu...
+menuitem.edit.my.profile = Edytuj m\u00f3j profil
+menuitem.edit.status.message = Edytuj opis statusu
 menuitem.enter.login.information = Wprowad\u017a informacje logowania
 menuitem.exit = Wyjd\u017a
 menuitem.grant.moderator = Zezw\u00f3l na moderowanie
@@ -553,14 +554,14 @@ menuitem.join.room = Do\u0142\u0105cz do wybranego pokoju
 menuitem.kick.user = Wyrzu\u0107 u\u017cytkownika
 menuitem.languages = J\u0119zyki
 menuitem.logout.no.status = Wyloguj
-menuitem.logout.with.status = Wyloguj z opisem (...)
-menuitem.lookup.profile = Przeszukaj profil…
+menuitem.logout.with.status = Wyloguj z opisem
+menuitem.lookup.profile = Przeszukaj profil
 menuitem.move.to = Przenie\u015b do
 menuitem.online.help = Forum Sparka (online)
 menuitem.open = Otw\u00f3rz
-menuitem.open.with = Otw\u00f3rz za pomoc\u0105…
+menuitem.open.with = Otw\u00f3rz za pomoc\u0105
 menuitem.plugins = Wtyczki
-menuitem.preferences = W\u0142a\u015bciwo\u015bci
+menuitem.preferences = Ustawienia Sparka
 menuitem.remove = Usu\u0144
 menuitem.remove.alert.when.online = Usu\u0144 alert
 menuitem.remove.bookmark = Usu\u0144 zak\u0142adk\u0119
@@ -573,10 +574,10 @@ menuitem.rename = Zmie\u0144 nazw\u0119
 menuitem.revoke.moderator = Odbierz uprawnienia moderatora
 menuitem.revoke.voice = Odbierz uprawnienia do po\u0142\u0105czenia g\u0142osowego
 menuitem.save = Zapisz
-menuitem.save.as = Zapisz jako...
+menuitem.save.as = Zapisz jako
 menuitem.send.a.file = Wy\u015blij plik
-menuitem.send.a.message = Wy\u015blij wiadomo\u015b\u0107 grupow\u0105 do wybranych u\u017cytkownik\u00f3w…
-menuitem.set.status.message = Ustaw opis statusu...
+menuitem.send.a.message = Wy\u015blij wiadomo\u015b\u0107 grupow\u0105 do wybranych u\u017cytkownik\u00f3w
+menuitem.set.status.message = Ustaw opis statusu
 menuitem.show.empty.groups = Poka\u017c puste grupy
 menuitem.show.offline.group = Poka\u017c grup\u0119 u\u017cytkownik\u00f3w nieaktywnych
 menuitem.show.traffic = Poka\u017c okno statystyk ruchu
@@ -584,7 +585,7 @@ menuitem.sign.in = Zapisz si\u0119
 menuitem.sign.in.at.login = Zapisz si\u0119 przy logowaniu
 menuitem.sign.out = Wypisz si\u0119
 menuitem.start.a.chat = Rozpocznij rozmow\u0119
-menuitem.start.a.conference = Rozpocznij konferencj\u0119…
+menuitem.start.a.conference = Rozpocznij konferencj\u0119
 menuitem.status = Status
 menuitem.subscribe.to = Zapisz si\u0119 do
 menuitem.unban = Odblokuj
@@ -645,7 +646,7 @@ message.conference.info.error = Nie mo\u017cna uzyska\u0107 informacji o konfere
 message.conference.service.error = Nie mo\u017cna zlokalizowa\u0107 us\u0142ugi konferencji
 message.confirm.destruction.of.room = Usuni\u0119cie pokoju roz\u0142\u0105czy wszystkich uczestnik\u00f3w, kontynuowa\u0107?
 message.confirmation.password.error = Powt\u00f3rz has\u0142o
-message.connecting.please.wait = \u0141\u0105czenie, prosz\u0119 czeka\u0107…
+message.connecting.please.wait = \u0141\u0105czenie, prosz\u0119 czeka\u0107
 message.connection.failed = Nie mo\u017cna nawi\u0105za\u0107 po\u0142\u0105czenia z {0}
 message.create.account = Nie mo\u017cna utworzy\u0107 konta
 message.create.or.join.room = Utw\u00f3rz lub do\u0142\u0105cz do konferencji
@@ -704,17 +705,17 @@ message.invalid.status = Nieprawid\u0142owy opis statusu
 message.invalid.username.password = Niepoprawna nazwa u\u017cytkownika lub has\u0142o
 message.invite.users.to.conference = Zapro\u015b u\u017cytkownik\u00f3w do pokoju konferencyjnego
 message.is.shared.group = {0} jest grup\u0105 wsp\u00f3\u0142dzielon\u0105
-message.is.typing.a.message = {0} pisze wiadomo\u015b\u0107…
+message.is.typing.a.message = {0} pisze wiadomo\u015b\u0107
 message.join.conference.room = Do\u0142\u0105cz do pokoju konferencyjnego
 message.kicked.error = Nie masz uprawnie\u0144 aby usun\u0105\u0107 {0} z tego pokoju
 message.last.message.received = Ostatnia wiadomo\u015b\u0107 otrzymana o {0}
-message.loading.please.wait = \u0141adowanie. Prosz\u0119 czeka\u0107…
+message.loading.please.wait = \u0141adowanie. Prosz\u0119 czeka\u0107
 message.locked.workstation = U\u017cytkownik zablokowa\u0142 komputer
 message.name.of.group = Nazwa grupy
 message.name.of.search.service.question = Nazwa szukanej us\u0142ugi?
-message.negotiate.file.transfer = Negocjowanie przesy\u0142u pliku, prosz\u0119 czeka\u0107…
-message.negotiate.stream = Negocjowanie strumienia po\u0142\u0105czenia, prosz\u0119 czeka\u0107…
-message.negotiation.file.transfer = Negocjowanie transferu pliku z {0}, prosz\u0119 czeka\u0107…
+message.negotiate.file.transfer = Negocjowanie przesy\u0142u pliku, prosz\u0119 czeka\u0107
+message.negotiate.stream = Negocjowanie strumienia po\u0142\u0105czenia, prosz\u0119 czeka\u0107
+message.negotiation.file.transfer = Negocjowanie transferu pliku z {0}, prosz\u0119 czeka\u0107
 message.new.message = Nowa wiadomo\u015b\u0107 od {0}
 message.new.spark.available = {0} jest dost\u0119pny. Czy chcesz zainstalowa\u0107?
 message.nickname.in.use = Pseudonim jest ju\u017c zaj\u0119ty, podaj inny
@@ -740,11 +741,11 @@ message.plugins.not.available = Nie mo\u017cna skontaktowa\u0107 si\u0119 z repo
 message.prompt.plugin.uninstall = Czy jeste\u015b pewien, \u017ce chcesz odinstalowa\u0107 {0}?
 message.received.file = Otrzyma\u0142e\u015b plik od {0}
 message.receiving.file = Odbierasz plik od {0}
-message.reconnect.attempting = Pr\u00f3buj\u0119 ponownie po\u0142\u0105czy\u0107...
+message.reconnect.attempting = Pr\u00f3buj\u0119 ponownie po\u0142\u0105czy\u0107
 message.reconnect.failed = Nie uda\u0142o si\u0119 po\u0142\u0105czy\u0107 ponownie
 message.reconnect.wait = Ponowna pr\u00f3ba po\u0142\u0105czenia za {0} sekund
 message.register.transports = Po\u0142\u0105cz do  jednej z dost\u0119pnych bram
-message.registering = \u0141\u0105cz\u0119 z {0}, prosz\u0119 czeka\u0107…
+message.registering = \u0141\u0105cz\u0119 z {0}, prosz\u0119 czeka\u0107
 message.registration.transport.failed = Po\u0142\u0105czenie do podanej bramy niemo\u017cliwe
 message.restart.spark = Musisz wy\u0142\u0105czy\u0107 Sparka aby zainstalowa\u0107 now\u0105 wersj\u0119, czy chcesz kontynuowa\u0107?
 message.restart.spark.changes = Wtyczka zostanie usuni\u0119ta przy ponownym uruchomieniu komunikatora
@@ -757,8 +758,9 @@ message.room.information.for = Informacje o pokoju {0}
 message.save.profile = Aby zapisa\u0107 zmiany w profilu, naci\u015bnij Zapisz
 message.search.for.contacts = Szukaj kontakt\u00f3w
 message.search.for.other.people = Szukaj innych os\u00f3b na serwerze
+message.search.input.short = Podaj przynajmniej pi\u0119\u0107 liter.
 message.search.service.not.available = Nie mo\u017cna skontaktowa\u0107 si\u0119 z us\u0142ug\u0105 wyszukiwania
-message.searching.please.wait = Trwa wyszukiwanie, prosz\u0119 czeka\u0107…
+message.searching.please.wait = Trwa wyszukiwanie, prosz\u0119 czeka\u0107
 message.select.add.room.to.add = Wybierz pok\u00f3j do dodania do listy us\u0142ug
 message.select.one.or.more = Wybierz jednego lub wi\u0119cej u\u017cytkownik\u00f3w z listy kontakt\u00f3w
 message.select.room.to.enter = Okre\u015bl pok\u00f3j, do kt\u00f3rego do\u0142\u0105czy\u0107
@@ -1017,5 +1019,4 @@ lookandfeel.color.red = Czerwony
 lookandfeel.color.green = Zielony
 lookandfeel.color.blue = Niebieski
 lookandfeel.color.opacity = Nieprzezroczysto\u015b\u0107
-lookandfeel.color.saved = Kolor zapisany
-#!#
+lookandfeel.color.saved = Kolor zapisany#!#
