groupchat modifications: - change room association of users - added more icons for roles (owner,admin,member) - changed old role icons
added new localized strings: 
menuitem.revoke.member = Revoke Membership
menuitem.revoke.admin = Revoke Admin
menuitem.revoke.owner = Revoke Ownership
menuitem.grant.member = Grant Membership
menuitem.grant.admin = Grant Admin
menutiem.grant.owner = Grant Ownership
menuitem.affiliation = Affiliation

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12247 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -520,7 +520,11 @@ menuitem.edit.my.profile = Edit my profile...
 menuitem.edit.status.message = Edit custom status messages...
 menuitem.enter.login.information = Enter login information
 menuitem.exit = Exit
+menuitem.affiliation = Affiliation
 menuitem.grant.moderator = Grant moderator
+menuitem.grant.member = Grant Membership
+menuitem.grant.admin = Grant Admin
+menuitem.grant.owner = Grant Ownership
 menuitem.grant.voice = Grant voice
 menuitem.help = Help
 menuitem.hide = Hide
@@ -550,6 +554,9 @@ menuitem.remove.service = Remove service
 menuitem.rename = Rename
 menuitem.revoke.moderator = Revoke moderator
 menuitem.revoke.voice = Revoke voice
+menuitem.revoke.member = Revoke Membership
+menuitem.revoke.admin = Revoke Admin
+menuitem.revoke.owner = Revoke Ownership
 menuitem.save = Save
 menuitem.save.as = Save as...
 menuitem.send.a.file = Send a file
