--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -696,13 +696,20 @@ menuitem.block.user = Teilnehmer blockieren
 menuitem.unblock.user = Blockierung eines Teilnehmers aufheben
 menuitem.block.contact = Kontakt blockieren
 menuitem.unblock.contact = Blockierung eines Kontaktes aufheben
-menuitem.kick.user = Teilnehmer aus der Konferenz ausschließen
+menuitem.kick.user = Teilnehmer rauswerfen
 menuitem.voice = Schreibrecht
 menuitem.revoke.voice = Schreibrecht entziehen
 menuitem.grant.voice = Schreibrecht geben
 menuitem.ban.user = Teilnehmer sperren
-menuitem.grant.moderator = Moderatorenrechte geben
-menuitem.revoke.moderator = Moderatorenrechte widerufen
+menuitem.affiliation = Raumassoziierung
+menuitem.grant.moderator = Moderatorenstatus geben
+menuitem.grant.member = Mitgliedsstatus geben
+menuitem.grant.admin = Adminstatus geben
+menuitem.grant.owner = Besitzerstatus geben
+menuitem.revoke.moderator = Moderatorenstatus widerrufen
+menuitem.revoke.member = Mitgliedsstatus widerrufen
+menuitem.revoke.admin = Adminstatus widerrufen
+menuitem.revoke.owner = Besitzerstatus widerrufen
 menuitem.invite.users = Teilnehmer einladen
 menuitem.invite.group.to.conference = Gruppe zu einer Konferenz einladen
 menuitem.start.a.conference = Eine Konferenz starten...
