Spark privacy plugin. now you are able to manager your privacylists and activate them via status selection
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12249 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -572,8 +572,8 @@ menuitem.start.a.chat = Start a chat
 menuitem.start.a.conference = Start a conference...
 menuitem.status = Status
 menuitem.subscribe.to = Subscribe to
-menuitem.unban = Unban
-menuitem.unblock.user = Unblock user
+menuitem.unban = Unban user on current list
+menuitem.unblock.user = Unblock user on current list
 menuitem.user.guide = User guide
 menuitem.view.client.version = View client version
 menuitem.view.contact.history = View contact history
@@ -1005,5 +1005,37 @@ lookandfeel.color.blue = Blue
 lookandfeel.color.opacity = Opacity
 lookandfeel.color.saved = Color saved
 
+
+##Settings for the privacy plugin
+privacy.title.preferences = Spark Privacy Preferences
+privacy.title.panel = Please use right mouse button
+privacy.label.iq.desc = Query
+privacy.label.pin.desc = Presence in
+privacy.label.pout.desc = Presence out
+privacy.label.msg.desc Messages
+privacy.border.information = Privacy Information
+privacy.label.information = Use right klick menu to add or delete lists or items 
+privacy.root.node = Privacy Lists
+privacy.label.preferences = Privacy Plugin
+pricacy.tooltip.preferences = Spark privacy settings
+privacy.label.list.is.active = ACTIVE
+privacy.label.list.is.default = DEFAULT
+privacy.border.block = Block
+privacy.pick.one.or.more = Pick on or more items to add to the list
+privacy.title.add.picker = Add Items to List
+privacy.node.contacts = Contacts
+privacy.node.groups = Groups
+privacy.menu.add.contacts = Add Contacts to list
+privacy.menu.add.groups = Add Groups to list
+privacy.menu.add.rem.items = Remove {0} items from list
+privacy.menu.remove = Remove
+privacy.menu.avtivate.list = Activate
+privacy.menu.default.list = Set as default
+privacy.menu.add.list = Add list
+privacy.menu.remove.list = Remove list
+privacy.dialog.add.list = Please enter list name
+privacy.dialog.rem.list = Do you realy want to remove {0}?
+privacy.status.menu.entry = Privacy Lists
+privacy.name.for.default.list = Default
 
 #!#
