--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -693,8 +693,8 @@ menuitem.view.logs = Logs anzeigen
 menuitem.remove = Entfernen
 menuitem.change.nickname = Angezeigten Namen ändern
 menuitem.block.user = Teilnehmer blockieren
-menuitem.unblock.user = Blockierung eines Teilnehmers aufheben
-menuitem.block.contact = Kontakt blockieren
+menuitem.unblock.user = Blockierung auf aktueller Liste aufheben
+menuitem.block.contact = Kontakt auf akueller Liste blockieren
 menuitem.unblock.contact = Blockierung eines Kontaktes aufheben
 menuitem.kick.user = Teilnehmer rauswerfen
 menuitem.voice = Schreibrecht
@@ -895,4 +895,40 @@ lookandfeel.color.green = Grün
 lookandfeel.color.blue = Blau
 lookandfeel.color.opacity = Deckkraft
 lookandfeel.color.saved = Farben gespeichert
+
+
+##Settings for the privacy plugin
+privacy.title.preferences = Privatsphäreeinstellungen
+privacy.title.panel = Benutzen Sie die rechte Maustaste
+privacy.label.iq.desc = Abfragen
+privacy.label.pin.desc = Anwesenheit empfangen
+privacy.label.pout.desc = Anwesenheit senden
+privacy.label.msg.desc Nachrichten
+privacy.border.information = Legende
+privacy.label.information = Benutzen Sie die rechte Maustaste um Elemente hinzuzufügen oder zu entfernen
+privacy.root.node = Privatsphärelisten
+privacy.label.preferences = Privatsphäre
+pricacy.tooltip.preferences = Spark Privatsphäreeinstellungen
+privacy.label.list.is.active = AKTIV
+privacy.label.list.is.default = STANDARD
+privacy.border.block = Sperren
+privacy.pick.one.or.more = Wähle ein oder mehrere Elemente aus der Liste
+privacy.title.add.picker = Elemente zur Liste hinzufügen
+privacy.node.contacts = Konakte
+privacy.node.groups = Gruppen
+privacy.menu.add.contacts = Kontakt zur Liste hinzufügen
+privacy.menu.add.groups = Gruppe zur Liste hinzufügen
+privacy.menu.add.rem.items = Entferne {0} Elemente von der Liste
+privacy.menu.remove = Entferne 
+privacy.menu.avtivate.list = Aktivieren
+privacy.menu.default.list = Als Standard setzen
+privacy.menu.add.list = Liste hinzufügen
+privacy.menu.remove.list = Liste entfernen
+privacy.dialog.add.list = Bitte den Namen der Liste eingeben
+privacy.dialog.rem.list = Möchten Sie wirklich "{0}" entfernen?
+privacy.status.menu.entry = Privatsphäre
+privacy.name.for.default.list = Standard
+
+
+
 #!#
