spellingplugin case insensitivity http://community.igniterealtime.org/message/211347#211347
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12250 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/spelling/src/resources/i18n/spellchecker_i18n.properties
+++ b/src/plugins/spelling/src/resources/i18n/spellchecker_i18n.properties
@@ -3,4 +3,5 @@ title.spellchecker = Spellchecker
 preference.spellcheckingEnabled = Enable &Spellchecking
 preference.autoSpellcheckingEnabled = Enable &Auto Spellchecking
 preference.language = &Language
+preference.ignore.uppercasedword = &Ignore upper and lowercase
 button.check.spelling = Check spelling
