--- a/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_de.properties
+++ b/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_de.properties
@@ -3,4 +3,5 @@ title.spellchecker = Rechtschreibprüfung
 preference.spellcheckingEnabled = &Rechtschreibprüfung aktivieren
 preference.autoSpellcheckingEnabled = &Automatische Rechtschreibprüfung aktivieren
 preference.language = &Sprache
+preference.ignore.uppercasedword = &Groß- und Kleinschreibung ignorieren
 button.check.spelling = Rechtschreibung überprüfen
