SPARK-902 typo in privacy preferences
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12257 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -1014,7 +1014,7 @@ privacy.label.pin.desc = Presence in
 privacy.label.pout.desc = Presence out
 privacy.label.msg.desc Messages
 privacy.border.information = Privacy Information
-privacy.label.information = Use right klick menu to add or delete lists or items 
+privacy.label.information = Use right click menu to add or delete lists or items 
 privacy.root.node = Privacy Lists
 privacy.label.preferences = Privacy Plugin
 pricacy.tooltip.preferences = Spark privacy settings
