--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -914,7 +914,7 @@ privacy.label.list.is.default = STANDARD
 privacy.border.block = Sperren
 privacy.pick.one.or.more = Wähle ein oder mehrere Elemente aus der Liste
 privacy.title.add.picker = Elemente zur Liste hinzufügen
-privacy.node.contacts = Konakte
+privacy.node.contacts = Kontakte
 privacy.node.groups = Gruppen
 privacy.menu.add.contacts = Kontakt zur Liste hinzufügen
 privacy.menu.add.groups = Gruppe zur Liste hinzufügen
